--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             gap: 2rem;
             margin-top: 2rem;
         }
-
+/*heyo*/
         .contact-link {
             display: flex;
             align-items: center;
