--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             gap: 2rem;
             margin-top: 2rem;
         }
-/*heyo*/
+
         .contact-link {
             display: flex;
             align-items: center;
@@ -436,30 +436,49 @@
     </section>
 
     <!-- Education Section -->
-    <section class="section">
-        <h2>Education</h2>
-        
-        <div class="card">
-            <div class="card-header">
-                <div class="company-icon">
-                    <i class="fas fa-graduation-cap"></i>
-                </div>
-                <div>
-                    <h3>Bachelor of Engineering</h3>
-                    <p>RV College of Engineering</p>
-                    <p>Electronics and Communications Engineering</p>
-                    <p><strong>CGPA: 8.52</strong></p>
-                </div>
-                <div class="duration">2023 - 2027</div>
+<section class="section">
+    <h2>Education</h2>
+    
+    <!-- College -->
+    <div class="card">
+        <div class="card-header">
+            <div class="company-icon">
+                <i class="fas fa-graduation-cap"></i>
             </div>
-            <div class="skills">
-                <span class="skill">SOLIDWORKS</span>
-                <span class="skill">SQL</span>
-                <span class="skill">Machine Learning</span>
-                <span class="skill">Data Structures</span>
+            <div>
+                <h3>Bachelor of Engineering</h3>
+                <p>RV College of Engineering</p>
+                <p>Electronics and Communications Engineering</p>
+                <p><strong>CGPA: 8.52</strong></p>
             </div>
+            <div class="duration">2023 - 2027</div>
         </div>
-    </section>
+        <div class="skills">
+            <span class="skill">Python</span>
+            <span class="skill">MySQL</span>
+            <span class="skill">SOLIDWORKS</span>
+            <span class="skill">SQL</span>
+            <span class="skill">Machine Learning</span>
+            <span class="skill">Data Structures</span>
+        </div>
+    </div>
+
+    <!-- School -->
+    <div class="card">
+        <div class="card-header">
+            <div class="company-icon">
+                <i class="fas fa-school"></i>
+            </div>
+            <div>
+                <h3>DAV Public School</h3>
+                <p>Class 10th — <strong>97.4%</strong></p>
+                <p>Class 12th — <strong>91.8%</strong></p>
+            </div>
+            <div class="duration">2019 - 2023</div>
+        </div>
+    </div>
+</section>
+
 
     <!-- Projects Section -->
     <section class="section" id="projects">
