--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             line-height: 1.6;
         }
 
-        /* Navigation */
+        /* Navigation ok */
         .nav {
             position: fixed;
             top: 0;
