--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             overflow-x: hidden;
         }
 
-        /* Particles.js Container - Crucial for click-through */
+        /* Particles.okjs Container - Crucial for click-through */
         #particles-js {
             position: fixed;
             width: 100%;
