--- a/index.html
+++ b/index.html
@@ -743,15 +743,22 @@
         </div>
 
         <div class="project-card">
-            <h3>🔋 Comprehensive Analysis & Prediction System of EV Battery</h3>
-            <p>Developed a system for analyzing EV battery parameters and predicting battery life, providing data-driven insights for performance optimization.</p>
-            <div class="tech-stack">
-                <span class="tech">EV Data Analysis</span>
-                <span class="tech">Predictive Modeling</span>
-                <span class="tech">Time Series</span>
-                <span class="tech">Python</span>
-            </div>
-        </div>
+    <h3>🌐 IFFCO Login & Information Website</h3>
+    <p>
+        Built a complete web application during my internship at IFFCO featuring a secure login system and
+        interactive sections for <b>About</b>, <b>Products</b>, and <b>Contact</b>.  
+        Designed using <b>HTML, CSS, JavaScript, and JSON</b>, the website ensures a modern UI/UX while maintaining
+        modular and scalable code.
+    </p>
+    <div class="tech-stack">
+        <span class="tech">HTML</span>
+        <span class="tech">CSS</span>
+        <span class="tech">JavaScript</span>
+        <span class="tech">JSON</span>
+        <span class="tech">UI/UX</span>
+    </div>
+</div>
+
 
         <div class="project-card">
             <h3>⚡ Battery Health Monitoring System using Machine Learning </h3>
