--- a/index.html
+++ b/index.html
@@ -764,18 +764,35 @@
         <h2>Featured Projects</h2>
         
         <div class="project-card">
-            <h3>🏆 AI-based Food Compliance System</h3>
-            <p><strong>2nd Runner-Up at BITS Pilani API Hackathon</strong></p>
-            <p>Developed an AI-based Food Compliance System using Computer Vision, NLP, and API integrations to verify food products against regulatory standards.</p>
-            <div class="tech-stack">
-                <span class="tech">API Development</span>
-                <span class="tech">Machine Learning</span>
-                <span class="tech">NLP</span>
-                <span class="tech">Food Safety</span>
-                <span class="tech">FSSAI Compliance</span>
-                <span class="tech">Computer Vision</span>
-            </div>
-        </div>
+    <h3>💼 Responsive Personal Resume Website</h3>
+    <p>
+        A responsive personal resume website built with <b>HTML, CSS, and JavaScript</b>, featuring a modern design, 
+        downloadable PDF resume, and dedicated sections for <b>Experience, Projects, and Contact</b>. 
+        Showcases my skills, education, and work in a clean, professional format.
+    </p>
+    <div class="tech-stack">
+        <span class="tech">HTML</span>
+        <span class="tech">CSS</span>
+        <span class="tech">JavaScript</span>
+        <span class="tech">Responsive Design</span>
+        <span class="tech">UI/UX</span>
+    </div>
+
+    <!-- 🔗 Project Links -->
+    <div class="project-links">
+        <a href="https://github.com/Ujjwal120605/CV" 
+           target="_blank" 
+           class="btn-link github">
+            <i class="fab fa-github"></i> GitHub
+        </a>
+        <a href="https://cv-seven-puce.vercel.app/" 
+           target="_blank" 
+           class="btn-link demo">
+            <i class="fas fa-external-link-alt"></i> Live Demo
+        </a>
+    </div>
+</div>
+
 
         <div class="project-card">
             <h3>🌱 Hyperspectral Crop Mapping using Machine Learning</h3>
