--- a/index.html
+++ b/index.html
@@ -837,15 +837,20 @@
           
 
         <div class="project-card">
-            <h3>⚡ Battery Health Monitoring System using Machine Learning </h3>
-            <p>Built a predictive model to monitor battery health and efficiency, utilizing historical charge-discharge data. Employed regression techniques to estimate battery lifespan and optimize charging cycles, extending battery longevity.</p>
-            <div class="tech-stack">
-                <span class="tech">IoT Sensors</span>
-                <span class="tech">Machine Learning</span>
-                <span class="tech">Anomaly Detection</span>
-                <span class="tech">Python</span>
-            </div>
-        </div>
+    <h3>🌌 Metaverse Website using Next.js</h3>
+    <p>Developed a modern and interactive Metaverse-themed website using Next.js, featuring smooth animations, responsive design, and an immersive 3D-inspired UI. Focused on performance, scalability, and user engagement with cutting-edge web technologies.</p>
+    <div class="tech-stack">
+        <span class="tech">Next.js</span>
+        <span class="tech">React</span>
+        <span class="tech">Tailwind CSS</span>
+        <span class="tech">Framer Motion</span>
+    </div>
+    <div class="project-links">
+        <a href="https://metaverse-website-mocha.vercel.app/" target="_blank" class="btn">🌍 Live Demo</a>
+        <a href="https://github.com/Ujjwal120605/metaverse-website" target="_blank" class="btn">💻 GitHub</a>
+    </div>
+</div>
+
 
         <div class="project-card">
             <h3>🔊 Noise Cancellation using Machine Learning</h3>
