--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                     IT intern @IFFCO | Pre-final year RVCE undergraduate | ML & Data Structures enthusiast| Member ACM Chapter @RVCE | Building efficient, real-world tech
                 </p>
                 <div class="buttons">
-                    <a href="ujjwal_final_resume_pdf (4).pdf" class="btn btn-primary" target="_blank">
+                    <a href="Resume_txt.pdf" class="btn btn-primary" target="_blank">
                         <i class="fas fa-download"></i>
                         Resume
                     </a>
