--- a/index.html
+++ b/index.html
@@ -1155,6 +1155,8 @@
                 <span class="skill-tag">SOLIDWORKS</span>
                 <span class="skill-tag">Battery Management Systems</span>
                 <span class="skill-tag">Kaggle</span>
+                <span class="skill-tag">Nextjs</span>
+                <span class="skill-tag">Tailwind css</span>
                 <span class="skill-tag">Operating Systems</span>
                 <span class="skill-tag">Git</span>
                 <span class="skill-tag">MySQL</span>
