--- a/index.html
+++ b/index.html
@@ -2908,10 +2908,10 @@ function generateResponse(message) {
     if (matchesKeywords(lowerMessage, ['iffco', 'fertilizer', 'internship work', 'current work'])) {
         return `At IFFCO, Ujjwal works as an IT Intern contributing to HRMS portal development, web development tasks, and gaining exposure to industrial automation systems and IT infrastructure.`;
     }
-    if (matchesKeywords(lowerMessage, ['father'])) {
+    if (matchesKeywords(lowerMessage, ['father','name'])) {
         return `The name of ujjwal bajpai's father is ajay bajpai`;
     }
-    if (matchesKeywords(lowerMessage, ['mother'])) {
+    if (matchesKeywords(lowerMessage, ['mother','name'])) {
         return `The name of ujjwal bajpai's mother is soni bajpai`;
     }
     
