--- a/index.html
+++ b/index.html
@@ -2716,7 +2716,7 @@ function generateResponse(message) {
                 role: "IT Intern",
                 company: "Indian Farmers Fertiliser Cooperative Limited (IFFCO)",
                 duration: "July 2025 - September 2025",
-                location: "Aonla, Uttar Pradesh",
+                location: "Aonla,Bareily,Uttar Pradesh",
                 responsibilities: ["HRMS portal development", "Web development tasks", "Industrial automation exposure"]
             },
             {
