--- a/index.html
+++ b/index.html
@@ -2673,7 +2673,7 @@ function generateResponse(message) {
         // Personal Information
         name: "Ujjwal Bajpai",
         age: calculateAge("2005-06-12"),
-        location: "Agra, Uttar Pradesh, India",
+        location: "Aonla,Bareily Uttar Pradesh, India",
         currentLocation: "Bangalore, Karnataka (for college)",
         
         // Family Information
