--- a/index.html
+++ b/index.html
@@ -2263,6 +2263,7 @@ body.light-theme .voice-message.user {
                 <li><a href="#about" onclick="closeMobileMenu()">About</a></li>
                 <li><a href="#experience" onclick="closeMobileMenu()">Experience</a></li>
                 <li><a href="#projects" onclick="closeMobileMenu()">Projects</a></li>
+                <li><a href="#projects" onclick="closeMobileMenu()">Github</a></li>
                 <li><a href="#skills-section" onclick="closeMobileMenu()">Skills</a></li>
                 <li><a href="#certifications" onclick="closeMobileMenu()">Certifications</a></li>
                 <li><a href="#contact" onclick="closeMobileMenu()">Contact</a></li>
