--- a/index.html
+++ b/index.html
@@ -4832,6 +4832,10 @@ body.light-theme .voice-message.user {
                 <span class="skill-tag">C</span>
                 <span class="skill-tag">Python</span>
                 <span class="skill-tag">HTML</span>
+                <span class="skill-tag">CSS</span>
+                <span class="skill-tag">Javascript</span>
+                <span class="skill-tag">Typescript</span>
+
             </div>
         </div>
 
@@ -4849,6 +4853,8 @@ body.light-theme .voice-message.user {
                 <span class="skill-tag">Data Science</span>
                 <span class="skill-tag">Machine Learning</span>
                 <span class="skill-tag">Deep Learning</span>
+                <span class="skill-tag">Reactjs</span>
+                <span class="skill-tag">Nextjs</span>
             </div>
         </div>
 
