--- a/index.html
+++ b/index.html
@@ -4594,7 +4594,7 @@ body.light-theme .voice-message.user {
                 </div>
                 
                 <div class="buttons">
-                    <a href="Resume_txt.pdf" class="btn btn-primary" target="_blank">
+                    <a href="Resume_txt(3).pdf" class="btn btn-primary" target="_blank">
                         <i class="fas fa-download"></i>
                         Resume
                     </a>
